focused on a specific question for the  README

--- a/README.html
+++ b/README.html
@@ -365,28 +365,12 @@ data set includes the year, the state, the racial profile of the
 aggressor, the victim, the nature of the crime, and the motive of the
 crime.</p>
 </div>
-<div id="the-questions-that-we-want-to-answer-isare" class="section level2">
-<h2>The question(s) that we want to answer is/are:</h2>
-<div id="how-many-hate-crimes-were-reported-per-year-and-how-has-that-changed-over-time" class="section level4">
-<h4>“How many hate crimes were reported per year, and how has that
-changed over time?”</h4>
-</div>
-<div id="which-states-report-the-highest-and-lowest-total-number-of-hate-crimes" class="section level4">
-<h4>“Which states report the highest and lowest total number of hate
-crimes?”</h4>
-</div>
-<div id="what-are-the-most-frequently-targeted-groups-e.g.-by-race-religion-gender-etc." class="section level4">
-<h4>“What are the most frequently targeted groups (e.g., by race,
-religion, gender, etc.)?”</h4>
-</div>
-<div id="what-proportion-of-total-crimes-are-racially-motivated-vs.-religiongendersexual-orientationmotivated" class="section level4">
-<h4>“What proportion of total crimes are racially motivated
-vs. religion/gender/sexual orientation–motivated?”</h4>
-</div>
-<div id="have-certain-types-of-hate-crimes-e.g.-anti-asian-anti-black-anti-religion-increased-or-decreased-disproportionately-over-time" class="section level4">
-<h4>“Have certain types of hate crimes (e.g., anti-Asian, anti-Black,
-anti-religion) increased or decreased disproportionately over
-time?”</h4>
+<div id="the-question-that-we-want-to-answer-is" class="section level2">
+<h2>The question that we want to answer is:</h2>
+<div id="which-groups-racial-religious-gender-etc-are-most-frequently-targetted-and-what-events-may-have-caused-the-increase-or-decrease-of-certain-types-of-hate-crime-over-the-years" class="section level4">
+<h4>“Which groups (racial, religious, gender, etc…) are most frequently
+targetted, and what events may have caused the increase or decrease of
+certain types of hate crime over the years?”</h4>
 <p>Note: This project makes use of the coding language R, functions, and
 different libraries to run the code.</p>
 <hr />
